Add TabBar with two tabs

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -6,9 +6,22 @@
     xmlns:local="clr-namespace:FastCost"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="FastCost"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <!-- <ShellContent -->
+    <!--     Title="FastCost" -->
+    <!--     ContentTemplate="{DataTemplate local:MainPage}" -->
+    <!--     Route="MainPage" /> -->
+
+    <TabBar>
+        <ShellContent
+            Title="Costs"
+            ContentTemplate="{DataTemplate local:MainPage}"
+            Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
+        <!-- iOS to remove -->
+        <!-- TODO: change MainPage to new analysis page --> 
+        <ShellContent
+            Title="Analysis"
+            ContentTemplate="{DataTemplate local:MainPage}"
+        Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
+    </TabBar>
 
 </Shell>
