--- a/Views/AllCostsPage.xaml
+++ b/Views/AllCostsPage.xaml
@@ -24,7 +24,8 @@
         <CollectionView.ItemTemplate>
             <DataTemplate>
                 <StackLayout>
-                    <Label Text="{Binding Description}" FontSize="22"/>
+                    <Label Text="{Binding Value}" FontSize="20"/>
+                    <Label Text="{Binding Description}" FontSize="16"/>
                     <Label Text="{Binding Date}" FontSize="14" TextColor="Silver"/>
                 </StackLayout>
             </DataTemplate>
