Use Mapster in CostPage

--- a/Views/CostPage.xaml
+++ b/Views/CostPage.xaml
@@ -5,7 +5,7 @@
              x:Class="FastCost.Views.CostPage"
              Title="Cost">
     <ContentPage.BindingContext>
-        <models:Cost />
+        <models:CostModel />
     </ContentPage.BindingContext>
 
 
