Add labels - icons to costPage - category init

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -13,14 +13,12 @@
 
     <TabBar 
         Route="tabs">
-        <Tab Title="Add cost"
-             Icon="{OnPlatform 'icon_notes.png'}">
+        <Tab Title="Add cost" Icon="{OnPlatform 'icon_notes.png'}">
             <ShellContent
                 ContentTemplate="{DataTemplate views:MainPage}"
                 Route="mainPage" />
         </Tab>
-        <Tab Title="All costs"
-             Icon="{OnPlatform 'icon_about.png'}">
+        <Tab Title="All costs" Icon="{OnPlatform 'icon_about.png'}">
             <ShellContent
                 ContentTemplate="{DataTemplate views:AllCostsPage}"
                 Route="allCosts" />
