--- a/Views/CostPage.xaml
+++ b/Views/CostPage.xaml
@@ -87,10 +87,10 @@
             <Label Text="Sunset" FontAttributes="Bold" Grid.Column="2" Grid.Row="4" />
             <Label Text="Sunset2" FontAttributes="Bold" Grid.Column="2" Grid.Row="4" />
 
-            <Label x:Name="lblSunrise" WidthRequest="100" FontAttributes="None" Grid.Column="0" Grid.Row="2" HorizontalTextAlignment="Center" />
-            <Label x:Name="lblDaylight" WidthRequest="150" FontAttributes="None" Grid.Column="1" Grid.Row="2" HorizontalTextAlignment="Center" />
-            <Label x:Name="lblSunset" WidthRequest="100" FontAttributes="None" Grid.Column="2" Grid.Row="2" HorizontalTextAlignment="Center" />
-            <Label x:Name="lblSunset2" WidthRequest="100" FontAttributes="None" Grid.Column="3" Grid.Row="2" HorizontalTextAlignment="Center" />
+            <!-- <Label x:Name="lblSunrise" WidthRequest="100" FontAttributes="None" Grid.Column="0" Grid.Row="2" HorizontalTextAlignment="Center" /> -->
+            <!-- <Label x:Name="lblDaylight" WidthRequest="150" FontAttributes="None" Grid.Column="1" Grid.Row="2" HorizontalTextAlignment="Center" /> -->
+            <!-- <Label x:Name="lblSunset" WidthRequest="100" FontAttributes="None" Grid.Column="2" Grid.Row="2" HorizontalTextAlignment="Center" /> -->
+            <!-- <Label x:Name="lblSunset2" WidthRequest="100" FontAttributes="None" Grid.Column="3" Grid.Row="2" HorizontalTextAlignment="Center" /> -->
         </Grid>
 
         <!-- <HorizontalStackLayout Spacing="10"> -->
