HorizontalTextAlignment Center for labels

--- a/Views/CostPage.xaml
+++ b/Views/CostPage.xaml
@@ -62,25 +62,25 @@
             <Label Text="🌇" FontSize="72" Grid.Column="2" Grid.Row="0" />
             <Label Text="🌅" FontSize="72" Grid.Column="3" Grid.Row="0" />
 
-            <Label Text="Sunrise" FontAttributes="Bold" Grid.Column="0" Grid.Row="1" />
-            <Label Text="Daylight" FontAttributes="Bold" Grid.Column="1" Grid.Row="1" />
-            <Label Text="Sunset" FontAttributes="Bold" Grid.Column="2" Grid.Row="1" />
-            <Label Text="Sunset2" FontAttributes="Bold" Grid.Column="2" Grid.Row="1" />
+            <Label Text="Sunrise" FontAttributes="Bold" Grid.Column="0" Grid.Row="1" HorizontalTextAlignment="Center" />
+            <Label Text="Daylight" FontAttributes="Bold" Grid.Column="1" Grid.Row="1" HorizontalTextAlignment="Center" />
+            <Label Text="Sunset" FontAttributes="Bold" Grid.Column="2" Grid.Row="1" HorizontalTextAlignment="Center" />
+            <Label Text="Sunset2" FontAttributes="Bold" Grid.Column="3" Grid.Row="1" HorizontalTextAlignment="Center" />
 
             <Label Text="🌅" FontSize="72" Grid.Column="0" Grid.Row="2" />
             <Label Text="☀️" FontSize="72" Grid.Column="1" Grid.Row="2" />
             <Label Text="🌇" FontSize="72" Grid.Column="2" Grid.Row="2" />
             <Label Text="🌅" FontSize="72" Grid.Column="3" Grid.Row="2" />
 
-            <Label Text="Sunrise" FontAttributes="Bold" Grid.Column="0" Grid.Row="3" />
-            <Label Text="Daylight" FontAttributes="Bold" Grid.Column="1" Grid.Row="3" />
-            <Label Text="Sunset" FontAttributes="Bold" Grid.Column="2" Grid.Row="3" />
-            <Label Text="Sunset2" FontAttributes="Bold" Grid.Column="2" Grid.Row="3" />
+            <Label Text="Sunrise" FontAttributes="Bold" Grid.Column="0" Grid.Row="3" HorizontalTextAlignment="Center" />
+            <Label Text="Daylight" FontAttributes="Bold" Grid.Column="1" Grid.Row="3" HorizontalTextAlignment="Center" />
+            <Label Text="Sunset" FontAttributes="Bold" Grid.Column="2" Grid.Row="3" HorizontalTextAlignment="Center" />
+            <Label Text="Sunset2" FontAttributes="Bold" Grid.Column="3" Grid.Row="3" HorizontalTextAlignment="Center" />
 
             <Label Text="🌅" FontSize="72" Grid.Column="0" Grid.Row="3" />
             <Label Text="☀️" FontSize="72" Grid.Column="1" Grid.Row="3" />
             <Label Text="🌇" FontSize="72" Grid.Column="2" Grid.Row="3" />
-            <Label Text="🌅" FontSize="72" Grid.Column="3" Grid.Row="3" />
+            <Label Text="🌅" FontSize="72" Grid.Column="3" Grid.Row="4" />
 
             <Label Text="Sunrise" FontAttributes="Bold" Grid.Column="0" Grid.Row="4" />
             <Label Text="Daylight" FontAttributes="Bold" Grid.Column="1" Grid.Row="4" />
